--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
@@ -15,7 +14,7 @@
       <div class="chat response">
         <img src="{{ url_for('static', filename='img/chatbot.png') }}">
         <span>Hola <br> 
-          Soy una chatbot de Música, como puedo ayudarte
+          Soy una chatbot de Música, como puedo ayudarte.
         </span>
       </div>
     </div>
